# Phoenix

./: LICENSE  build.sh  clean.sh
Phoenix/: CMakeLists.txt  Makefile  Phoenix.sln
Phoenix/Debug/: GamePlayground.bsc  GamePlayground.exp  GamePlayground.ilk  Phoenix.exp  Phoenix.ilk
Phoenix/Debug/Levels/: LevelOne.lvl.tmx  test.tmx  untitled.tmx
Phoenix/Debug/include/Phoenix/: Convertion.h  Game.h  GameObject.h  Keyboard.h  Log.h  Scene.h  Tiledmap.h  Variables.h  testClass.h
Phoenix/GamePlayground/: Box.cpp  Box.h  GamePlayground.vcxproj  GamePlayground.vcxproj.filters  Main.cpp  Player.cpp  Player.h  PlaygroundGame.cpp  PlaygroundGame.h  testClass.cpp  testClass.h
Phoenix/GamePlayground/Debug/: Box.sbr  GamePlayground.vcxprojResolveAssemblyReference.cache  Main.sbr  Player.sbr  testClass.sbr  vc120.idb
Phoenix/GamePlayground/Debug/GamePlayground.tlog/: CL.read.1.tlog  (+10 more)
Phoenix/GamePlayground/Levels/: LevelOne.lvl.tmx  test.xml
Phoenix/Phoenix/: Convertion.cpp  Convertion.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Keyboard.cpp  Keyboard.h  Log.cpp  Log.h  Makefile  Phoenix.vcxproj  Phoenix.vcxproj.filters  Scene.cpp  Scene.h  Tiledmap.cpp  Tiledmap.h  Variables.h  testClass.cpp  xml_parser.cpp  xml_parser.h
Phoenix/Phoenix/Debug/: Convertion.sbr  Game.sbr  GameObject.sbr  Keyboard.sbr  Scene.sbr  testClass.sbr
Phoenix/Phoenix/Physics/: Collider.cpp  Collider.h
Phoenix/Phoenix/System/: Convertion.h  GameObject.cpp  GameObject.h  Keyboard.cpp  Keyboard.h  Scene.cpp  Scene.h  Tiledmap.cpp  Tiledmap.h  Variables.h  xml_parser.cpp  xml_parser.h
(+19 files in other folders)
